--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "power-cell-tracker",
-  "productName": "power-cell-tracker",
+  "name": "untitled-app",
+  "productName": "untitled-app",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".webpack/main",
@@ -24,7 +24,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "power_cell_tracker"
+            "name": "untitled-app"
           }
         },
         {
